# Finance-Analyzer

./: LICENSE  README.md  analyze.py  app.py  categories.json  cli.py  generate_transactions.py  pyproject.toml  transactions.csv
.github/workflows/: ci.yml
tests/: test_rules_and_categorization.py
